Готово превью, видео, частично направления. TODO: карусель с институтами и организациями (направления), 3 и 4 курс (направления), все остальное

--- a/src/study/_study.scss
+++ b/src/study/_study.scss
@@ -3,7 +3,7 @@
 
     &__link {
       display: inline-block;
-      width: 33%;
+      width: calc(25% - 4px);
       padding: 27px 30px;
 
       font-size: rem(20px);
