--- a/src/profiles/_profiles.scss
+++ b/src/profiles/_profiles.scss
@@ -3,8 +3,9 @@
 
     &__link {
       display: inline-block;
-      width: 33%;
+      width: calc(25% - 4px);
       padding: 27px 30px;
+      box-sizing: border-box;
 
       font-size: rem(20px);
       font-weight: bold;
