--- a/src/study/_study.scss
+++ b/src/study/_study.scss
@@ -64,3 +64,23 @@
       margin-bottom: 0;
     }
 }
+
+.study-courses {
+	&__container {
+		padding-left: 80px;
+		margin-bottom: 20px;
+	}
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	&__icon {
+		width: 40px;
+		height: 40px;
+		margin: 3px 10px 3px 0;
+		&_small {
+			width: 30px;
+			height: 30px;
+			margin-right: 3px;
+		}
+	}
+}
