--- a/src/payment/_payment.scss
+++ b/src/payment/_payment.scss
@@ -17,9 +17,10 @@
         text-align: center;
         color: white;
         font-size: 1.4rem;
-        line-height: 1rem;
+        line-height: 1.4rem;
         font-weight: bold;
         border-bottom: 1px solid white;
+		padding: 0 0 3px 0;
     }
     &__caption {
         color: white;
