--- a/src/practice/_practice.scss
+++ b/src/practice/_practice.scss
@@ -64,3 +64,70 @@
       margin-bottom: 0;
     }
 }
+
+.practice-slider {
+	a {
+		display: block;
+	}
+    &__item {
+      text-align: center;
+        display: flex !important;
+        align-items: center;
+        justify-content: center;
+        margin: 0 5px;
+        img {
+            max-width: 180px;
+            max-height: 100px;
+			margin: auto;
+        }
+        &::after {
+          content: "";
+          display: inline-block;
+          height: 100px;
+
+          vertical-align: middle;
+        }
+    }
+	&__img {
+		height: 100px;
+		display: flex;
+	}
+
+    .slick-slide a {
+      display: block;
+
+      vertical-align: middle;
+    }
+
+    .slick-arrow {
+      position: absolute;
+      top: 50%;
+      left: -65px;
+      z-index: 1;
+
+      overflow: hidden;
+      width: width("partners-slider-arrow.png");
+      height: height("partners-slider-arrow.png");
+      margin: -23px 0 0;
+      padding: 0;
+
+      white-space: nowrap;
+      text-indent: 100%;
+
+      background: resolve("partners-slider-arrow.png") center no-repeat;
+      border: none;
+      outline: none;
+      opacity: 0.7;
+
+        &:hover {
+          opacity: 1;
+        }
+    }
+
+    .slick-next {
+      right: -65px;
+      left: auto;
+
+      transform: rotate(180deg);
+    }
+}
