--- a/src/first/_first.scss
+++ b/src/first/_first.scss
@@ -2,12 +2,8 @@
   position: relative;
 
   height: 1080px;
-
   text-align: center;
   color: #fff;
-
-  /* background: resolve("first.jpg") center no-repeat;
-  background-size: cover; */
 
     &::before {
       content: "";
@@ -23,6 +19,10 @@
       width: 640px;
 
       vertical-align: middle;
+	  padding-bottom: 15px;
+	  &_muted {
+    		background-color: RGBA(0,0,0,0.3);
+		}
     }
 
     &__title {
